--- a/eprints_cfg/lang/en/phrases/langsnap.xml
+++ b/eprints_cfg/lang/en/phrases/langsnap.xml
@@ -19,6 +19,7 @@
   <epp:phrase id="viewname_eprint_language">Language</epp:phrase>
   <epp:phrase id="viewname_eprint_participant">Participant</epp:phrase>
   <epp:phrase id="viewname_eprint_activity">Activity</epp:phrase>
+  <epp:phrase id="viewname_eprint_round">Collection Round</epp:phrase>
   <epp:phrase id="document_fieldopt_ls_document_type_audio_mp3">Audio (MP3)</epp:phrase>
   <epp:phrase id="document_fieldopt_ls_document_type_audio_wav">Audio (wav)</epp:phrase>
   <epp:phrase id="document_fieldopt_ls_document_type_transcript">Transcript</epp:phrase>
@@ -72,12 +73,12 @@
 	            <epc:phrase ref="template/navigation:about"/>
 	          </a>
 	        </li>
-	            <li>
+<!--	            <li>
 	              <a href="{$config{http_url}}/view/language/">
 	                <epc:phrase ref="bin/generate_views:indextitleprefix"/>
 	                <epc:phrase ref="viewname_eprint_language"/> 
 	              </a>
-	            </li>
+	            </li> -->
 	            <li>
 	              <a href="{$config{http_url}}/view/participant/">
 	                <epc:phrase ref="bin/generate_views:indextitleprefix"/>
@@ -88,6 +89,12 @@
 	              <a href="{$config{http_url}}/view/activity/">
 	                <epc:phrase ref="bin/generate_views:indextitleprefix"/>
 	                <epc:phrase ref="viewname_eprint_activity"/>
+	              </a>
+	            </li>
+	            <li>
+	              <a href="{$config{http_url}}/view/round/">
+	                <epc:phrase ref="bin/generate_views:indextitleprefix"/>
+	                <epc:phrase ref="viewname_eprint_round"/>
 	              </a>
 	            </li>
         </ul>
